# uwb_beacons

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  build_and_run.sh  docker-compose.yml  package.xml  rebuild_debug.sh  rebuild_debug_router.sh  recieve.py  requirements.txt  setup.cfg  setup.py  toolchain-stm32f103xB.cmake
Src/: CMakeLists.txt  anchor.c  application.cpp  application.hpp  rover.c  target.c  target.h
Src/drivers/dw1000/: CMakeLists.txt  README.md  anchor.cpp  common.cpp  common.hpp  configs.hpp  dw1000.cpp  dw1000.hpp  parameters.hpp  router.cpp  rover.cpp
Src/drivers/dw1000_back/: anchor_bak.cpp  common_bak.hpp  dw1000_bak.cpp  dw1000_bak.hpp  dw1000_loop.hpp  router_bak.cpp
Src/drivers/uart_logger/: logger.cpp  logger.hpp
Src/messages/: basic.h  distance.h
Src/peripheral/flash/: CMakeLists.txt  flash.c  flash.h  flash_error_codes.h  flash_registers.h
Src/peripheral/led/: led.cpp  led.hpp
Src/peripheral/usart/: CMakeLists.txt  usart.c  usart.h  usart_driver.h  usart_driver.hpp  usart_manager.cpp  usart_manager.hpp
Src/platform/stm32/: CMakeLists.txt  led.cpp  usart_driver.c  usart_driver.cpp
Src/platform/ubuntu/: CMakeLists.txt  led.cpp  main.c  main.h  platform_specific.cpp  usart_driver.c
config/: README.md  example_room_setup.yaml  uwb_beacons_params.yaml  uwb_beacons_params_example.yaml  uwb_localizer_params_example.yaml
launch/: uwb_beacons.launch.py  uwb_beacons_ros2.launch.py  uwb_localizer.launch  uwb_localizer_ros2.launch.py
scripts/: algoritms.py  serial_messages.py  uwb_beacons_ros2.py  uwb_localizer.py  uwb_localizer_ros2.py
stm32-ioc/: .mxproject  Makefile  RTK-DW1000.ioc
stm32-ioc/Core/Inc/: main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
stm32-ioc/Core/Src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  system_stm32f1xx.c
stm32-ioc/Drivers/API/: Multilateration.c  Multilateration.h  logs.h
stm32-ioc/Src/: application.c
test/: analyze_measurements.py  check.py  check_converter.py  convert_data_to_table.py  interpolate_error.py  results.txt  results0.txt  save_test_data.py  simple_print.py
test/check_precision/: parce_data.py  plotter.py  save_test_data.py  single_anchor_test_plot.py
test/common/: algoritms.py  serial_messages.py
test/data/10/: 50000_2025-09-05_15-49-13.txt  50000_2025-09-05_15-49-50.txt
test/data/1000/: 500_2025-09-05_15-28-04.txt
test/data/1200/: 500_2025-09-05_15-29-00.txt
test/data/1300/: 500_2025-09-05_15-29-18.txt
test/data/140/: 1000_2025-09-05_15-20-28.txt
test/data/1400/: 500_2025-09-05_15-29-34.txt
test/data/1500/: 500_2025-09-05_15-29-49.txt
test/data/1600/: 500_2025-09-05_15-30-20.txt
test/data/180/: 1000_2025-09-05_15-21-18.txt
test/data/1800/: 500_2025-09-05_15-30-55.txt
test/data/20/: 1000_2025-09-05_15-17-27.txt  500_2025-09-05_15-50-02.txt
test/data/200/: 1000_2025-09-05_15-21-53.txt
test/data/2000/: 500_2025-09-05_15-31-41.txt
test/data/2100/: 500_2025-09-05_15-33-06.txt
test/data/220/: 500_2025-09-05_15-23-08.txt
test/data/2300/: 500_2025-09-05_15-34-02.txt
test/data/240/: 500_2025-09-05_15-23-23.txt
test/data/2400/: 500_2025-09-05_15-34-26.txt
test/data/280/: 500_2025-09-05_15-24-04.txt
test/data/30/: 250_2025-09-05_15-50-17.txt
test/data/300/: 500_2025-09-05_15-24-22.txt
test/data/335/: 100_2025-09-08_12-00-45.txt
test/data/40/: 1000_2025-09-05_15-17-50.txt
test/data/4000/: 500_2025-09-05_15-36-44.txt
test/data/500/: 500_2025-09-05_15-25-00.txt
test/data/5000/: 500_2025-09-05_15-37-47.txt
test/data/60/: 1000_2025-09-05_15-18-18.txt  250_2025-09-05_15-50-47.txt
test/data/600/: 500_2025-09-05_15-26-34.txt
test/data/6000/: 500_2025-09-05_15-39-02.txt
test/data/6500/: 500_2025-09-05_15-39-54.txt  500_2025-09-05_15-40-21.txt  500_2025-09-05_15-41-16.txt
test/data/7000/: 500_2025-09-05_15-42-00.txt
test/data/7500/: 500_2025-09-05_15-42-32.txt
test/data/76/: 1000_2025-09-08_11-34-19.txt  100_2025-09-08_11-39-21.txt
test/data/80/: 1000_2025-09-05_15-18-40.txt
test/data/trilateration/: log.txt  log0.txt  log1+.txt  log1.txt  log3.txt  log_from_window.txt
test/data0/100/: 1000_2025-09-08_14-28-57.txt
test/data0/10000/: 1000_2025-09-08_14-52-54.txt
test/data0/1100/: 1000_2025-09-08_14-40-03.txt
test/data0/1400/: 1000_2025-09-08_14-41-29.txt
test/data0/150/: 1000_2025-09-08_14-29-23.txt
test/data0/1600/: 1000_2025-09-08_14-42-50.txt
test/data0/1800/: 1000_2025-09-08_14-43-48.txt
test/data0/1900/: 1000_2025-09-08_14-44-24.txt
test/data0/2500/: 1000_2025-09-08_14-45-29.txt
test/data0/30/: 1000_2025-09-08_14-33-20.txt
test/data0/300/: 1000_2025-09-08_14-30-47.txt
test/data0/335/: 1000_2025-09-08_14-05-41.txt  100_2025-09-08_14-05-18.txt
test/data0/3500/: 1000_2025-09-08_14-47-03.txt
test/data0/4500/: 1000_2025-09-08_14-48-01.txt
test/data0/50/: 1000_2025-09-08_14-28-33.txt
test/data0/5000/: 1000_2025-09-08_14-48-31.txt
test/data0/60/: 1000_2025-09-08_14-34-07.txt
test/data0/600/: 1000_2025-09-08_14-37-03.txt
test/data0/6000/: 1000_2025-09-08_14-49-35.txt
test/data0/70/: 1000_2025-09-08_14-34-31.txt
test/data0/80/: 1000_2025-09-08_14-34-56.txt
test/data0/8000/: 1000_2025-09-08_14-51-07.txt
test/data0/90/: 1000_2025-09-08_14-35-22.txt
test/data0/900/: 1000_2025-09-08_14-39-10.txt
test/data0/9000/: 1000_2025-09-08_14-52-12.txt
test/data0/trilateration/: log0.txt
test/triangulation_on_surface/: save_test_data.py
uwb_beacons/: README.md  algoritms.py  parameters.py  requirements.txt  serial_messages.py  uwb_localizer_node.py
uwb_beacons/Src/: CMakeLists.txt  application.cpp
uwb_beacons/Src/drivers/uart_logger/: CMakeLists.txt  logger.cpp  logger.hpp
uwb_beacons/Src/peripheral/spi/: CMakeLists.txt
uwb_beacons/stm32-ioc/: Makefile  platform.ini
uwb_beacons/test/: analyze_measurements.py  plot_trilateration.py  simple_print.py
uwb_beacons/test/check_precision/: parce_data.py
uwb_beacons/test/common/: algoritms.py  test_alghorithm.py
uwb_beacons/test/data/: README.md
uwb_beacons/test/triangulation_on_surface/: plot_anchors_positions.py
(+66 files in other folders)
