<?xml version="1.0"?>
<package format="2">
  <name>uwb_localizer</name>
  <version>0.0.1</version>
  <description>UWB localization node (ROS wrapper for check.py)</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

</package>
